# fastapi_mongo

./: README.md  main.py  pyproject.toml
